# OPNsenseManager

./: .gitignore  README.md  Readme.md  app-release-signed.apk.idsig  buildozer.spec  changelog.md  config.yaml  db.py  gki.db  main.kv  main.py  package-lock.json  package.json  rules.db  signapk.txt  tailwind.config.js  vite.config.js
src/: lodash-es.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: alias.rs  commands.rs  dashboard.rs  db.rs  devices.rs  firewall.rs  firewall_logs.rs  http_client.rs  lib.rs  main.rs  power.rs  routes.rs  traffic.rs  update_checker.rs
src/lib/components/: Toast.svelte
src/lib/components/forms/: InitialSetupForm.svelte  Login.svelte  SettingsForm.svelte
src/lib/stores/: authStore.ts  fabStore.ts  toastStore.ts
src/routes/: +layout.svelte  +page.svelte  AppLayout.svelte  SettingsForm.svelte  TrafficChart.svelte
src/routes/alias/: +page.svelte
src/routes/devices/: +page.svelte
src/routes/logs/: +page.svelte  logWorker.ts
src/routes/routes/: +page.svelte
src/routes/rules/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/updates/: +page.svelte  Updates.svelte
