[package]
name = "opnsensemanager"
version = "3.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "opnsensemanager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rand = "0.8.5"
argon2 = "0.5.3"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
log = "0.4.22"
base64 = "0.22.1"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.40.0", features = ["full"] }
